Fix burning & bleeding bug with combat logic

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -788,6 +788,10 @@ pre > code {
 .tableHeader.noBtn {
   padding-right: 0px;
 }
+.tableHeader.skip-padding {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .tableHeader.sticky {
   position: sticky;
   z-index: 4;
